working on mobile theme, some minor bug fixed

--- a/themes/armoryRaiderMobile2013/css/mobile.css
+++ b/themes/armoryRaiderMobile2013/css/mobile.css
@@ -8,7 +8,7 @@
 #open-left,
 #open-right {
     font-size: 20px;
-    padding: 10px 20px 3px;
+    padding: 15px 26px;
     cursor: pointer;
 }
 #open-left:hover,
@@ -20,6 +20,7 @@
 }
 
 .snap-drawer-left {
+    width: 310px;
     border-right: 1px solid #DDD;
 }
 
@@ -52,9 +53,32 @@
     border-top-color: #505050;
     border-bottom-color: #505050;
 }
-
-
-
+.topbar {
+    position: fixed;
+    z-index: 2000;
+    width: 100%;
+    height: 50px;
+    top: 0px;
+}
+.topbar-inner {
+    background-color: #FAFAFA;
+    background-image: linear-gradient(to bottom, #FFF, #F2F2F2);
+    background-repeat: repeat-x;
+    border-bottom: 1px solid #D4D4D4;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.067);
+    height: 50px;
+}
+#pushContent {
+    height: 50px;
+}
+.user-widget {
+    padding:0;
+    margin: 30px 15px 15px;
+}
+.img-circle {
+    border: 1px solid rgba(0,0,0,0.1);
+    padding:1px;
+}
 /*
  * mobile CSS rules resource.
  * http://zsprawl.com/iOS/2012/03/css-for-iphone-ipad-and-retina-displays/
@@ -67,9 +91,7 @@
         font-size:12px;
         padding: 0;
     }
-    #pushContent {
-        display:none;
-    }
+    #pushContent {}
     .navbar .brand {
         font-size: small;
     }
@@ -94,9 +116,7 @@
 
 /* Landscape phones and down */
 @media (max-width: 480px) and (orientation:portrait) {
-    #pushContent {
-        display:none;
-    }
+    #pushContent {}
     body{
         font-weight: lighter;
     }
